Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-04-21 (SVN):
    * Now that we disabled D_ShowLoadingSize() for its drawing to front
      buffer, disable gl_rmisc.c::R_Envmap_f() too, for the same reason.

2012-04-21 (SVN):
    * Updated the known BUGS file: the fix for bug ##3519666 cures the
      issue of "16 bpp with ATI on windows", too.

2012-04-21 (SVN):
    * Fix bug #3519666: Disabled the progress bars drawing during level
      load in opengl: the implementation draws at certain intervals to
      GL_FRONT which is evil and causes flickering problems. If progress
      bars are required, the preprocessor macro DRAW_PROGRESSBARS must
      be defined when compiling.
    * gl_vidnt.c, gl_vidsdl.c: Made D_ShowLoadingSize() a stub function
      when DRAW_PROGRESSBARS is not defined.
    * gl_draw.c: Added Draw_CacheLoadingPic(), which is essentially the
      same as Draw_CachePic() but only loads gfx/menu/loading.lmp and
      deletes the progress bar pixels from it.
    * gl_screen.c: Added a short version of SCR_DrawLoading() which uses
      the new Draw_CacheLoadingPic() and doesn't draw the progress bars.
      Compiled conditionally, i.e. when DRAW_PROGRESSBARS is not defined.

2012-04-21 (SVN):
    * Made host_strings, info_strings and puzzle_strings static to their
      source files and only accessible by proper function calls. Added
      Host_GetString, CL_GetInfoString and CL_FindPuzzleString for this
      purpose. The string count global variables are still global. (As a
      side note, the new functions may use a little bit more security.)

2012-04-18 (SVN):
    * Limited hexen2 struct qsocket_s details only to net_*.c sources.
      For menu serverlist handling, added new procedures NET_SlistSort,
      NET_SlistPrintServer and NET_SlistPrintServerName. Added new
      procedure NET_QSocketGetTime for status and spawn commands' print