@@ -116,82 +116,6 @@ void R_InitExtraTextures (void)
 }
 
 /*
-===============
-R_Envmap_f
-
-Grab six views for environment mapping tests
-===============
-*/
-static void R_Envmap_f (void)
-{
-#if 0 /* drawing to front buffer is evil */
-	byte	buffer[256*256*4];
-	refdef_t	save_refdef;
-
-	if (cls.state != ca_active)
-		return;
-
-	memcpy (&save_refdef, &r_refdef, sizeof(refdef_t));
-	glDrawBuffer_fp (GL_FRONT);
-	glReadBuffer_fp (GL_FRONT);
-	envmap = true;
-
-	r_refdef.vrect.x = 0;
-	r_refdef.vrect.y = 0;
-	r_refdef.vrect.width = 256;
-	r_refdef.vrect.height = 256;
-
-	r_refdef.viewangles[0] = 0;
-	r_refdef.viewangles[1] = 0;
-	r_refdef.viewangles[2] = 0;
-	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
-	R_RenderView ();
-	glReadPixels_fp (0, 0, 256, 256, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
-	FS_WriteFile ("env0.rgb", buffer, sizeof(buffer));
-
-	r_refdef.viewangles[1] = 90;
-	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
-	R_RenderView ();
-	glReadPixels_fp (0, 0, 256, 256, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
-	FS_WriteFile ("env1.rgb", buffer, sizeof(buffer));
-
-	r_refdef.viewangles[1] = 180;
-	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
-	R_RenderView ();
-	glReadPixels_fp (0, 0, 256, 256, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
-	FS_WriteFile ("env2.rgb", buffer, sizeof(buffer));
-
-	r_refdef.viewangles[1] = 270;
-	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
-	R_RenderView ();
-	glReadPixels_fp (0, 0, 256, 256, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
-	FS_WriteFile ("env3.rgb", buffer, sizeof(buffer));
-
-	r_refdef.viewangles[0] = -90;
-	r_refdef.viewangles[1] = 0;
-	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
-	R_RenderView ();
-	glReadPixels_fp (0, 0, 256, 256, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
-	FS_WriteFile ("env4.rgb", buffer, sizeof(buffer));
-
-	r_refdef.viewangles[0] = 90;
-	r_refdef.viewangles[1] = 0;
-	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
-	R_RenderView ();
-	glReadPixels_fp (0, 0, 256, 256, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
-	FS_WriteFile ("env5.rgb", buffer, sizeof(buffer));
-
-	envmap = false;
-	glDrawBuffer_fp (GL_BACK);
-	glReadBuffer_fp (GL_BACK);
-	GL_EndRendering ();
-
-	memcpy (&r_refdef, &save_refdef, sizeof(refdef_t));
-	vid.recalc_refdef = 1;
-#endif /* if 0 */
-}
-
-/*
 ====================
 R_TimeRefresh_f
 
@@ -232,7 +156,6 @@ R_Init
 void R_Init (void)
 {
 	Cmd_AddCommand ("timerefresh", R_TimeRefresh_f);
-	Cmd_AddCommand ("envmap", R_Envmap_f);
 	Cmd_AddCommand ("pointfile", R_ReadPointFile_f);
 
 	Cvar_RegisterVariable (&r_norefresh);
